fixd login screen broken styles

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -471,7 +471,7 @@ ion-toolbar {
   text-decoration: none;
 }
 
-label.item.item-input {
+.contacts label.item.item-input {
   background: transparent;
   border-color: $purpleblue;
   border-width: 0px 0px 1.5px 0px !important;
